cambio por error de dependencias 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Configurar Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.1'  # ← VERSIÓN MÁS RECIENTE
+          flutter-version: '3.35.4'  # ← TU VERSIÓN EXACTA
           channel: 'stable'
           
       - name: Instalar dependencias
