--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,34 +7,34 @@ on:
     branches: [ main, master ]
 
 jobs:
-  integration-test:
-    runs-on: macos-latest
-    timeout-minutes: 45
+  # Trabajo 1: Pruebas de Integración en Android
+  android-integration-test:
+    runs-on: macos-latest # Usamos macOS para mejor estabilidad con emuladores
+    timeout-minutes: 25  # Un poco más de tiempo
 
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v4
-        
-      - name: Configurar Java
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
-          
-      - name: Configurar Flutter
-        uses: subosito/flutter-action@v2
+
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.38.3'
+          flutter-version: '3.38.3'  # Versión específica compatible
           channel: 'stable'
-          
+
       - name: Instalar dependencias
         run: flutter pub get
-        
-      - name: Ejecutar pruebas de integración
+
+      - name: Ejecutar Test en Emulador
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 31
-          target: google_apis
+          api-level: 29
+          target: default
           arch: x86_64
           profile: Nexus 6
+          disable-animations: true    # ← ACELERA EL BOOT
+          emulator-options: -no-audio -no-snapshot  # ← OPTIMIZACIONES
           script: flutter test integration_test/festivities_test.dart
