--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
   pull_request:
 
-
 jobs:
   integration-test:
     runs-on: macos-latest  # IMPORTANTE: ubuntu NO soporta emulador
@@ -28,5 +27,5 @@ jobs:
           api-level: 33
           arch: arm64-v8a
           target: google_apis
-          profile: Pixel_6
+          profile: Pixel_3     # ← CAMBIADO, ESTE SÍ EXISTE
           script: flutter test integration_test/festivities_test.dart
