--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,14 @@ on:
 
 jobs:
   integration-test:
-    runs-on: ubuntu-latest   # Android emulator funciona en Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.38.3"
+          flutter-version: "3.22.0"
 
       - name: Install dependencies
         run: flutter pub get
@@ -24,15 +22,10 @@ jobs:
       - name: Run integration tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: 33
+          api-level: 30
+          target: default
           arch: x86_64
-          target: google_apis
-          profile: pixel_xl
-
-          # 🔥 FIX DEL ESPACIO (esto evita el error FATAL)
-          disk-size: 6000M
-          ram-size: 2048M
-          heap-size: 512M
+          profile: pixel_2
           force-avd-creation: true
           disable-animations: true
 
