--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,15 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run integration tests
+      - name: Run integration tests (ARM emulator)
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 30
           target: default
-          arch: x86_64
+          arch: arm64-v8a
           profile: pixel_2
           force-avd-creation: true
           disable-animations: true
+          emulator-options: "-no-window -no-snapshot -noaudio -no-boot-anim"
 
           script: flutter test integration_test/festivities_test.dart
