--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,38 @@
-name: Flutter Integration Tests
+name: Flutter CI - Integration Tests
 
 on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  integration-test:
-    runs-on: ubuntu-latest
+  # Trabajo 1: Pruebas de Integración en Android
+  android-integration-test:
+    runs-on: macos-latest # Usamos macOS para mejor estabilidad con emuladores
+    timeout-minutes: 20
 
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.38.3"
+          flutter-version: '3.38.3'
+          channel: 'stable'
 
-      - name: Install dependencies
+      - name: Instalar dependencias
         run: flutter pub get
 
-      - name: Run integration tests (ARM emulator)
-        uses: ReactiveCircus/android-emulator-runner@v2
+      - name: Ejecutar Test en Emulador
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 30
+          api-level: 29
           target: default
-          arch: arm64-v8a
-          profile: pixel_2
-          force-avd-creation: true
-          disable-animations: true
-          emulator-options: "-no-window -no-snapshot -noaudio -no-boot-anim"
-
+          arch: x86_64
+          profile: Nexus 6
           script: flutter test integration_test/festivities_test.dart
