--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run integration tests
+      - name: Run Integration Tests on Android
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: 29  # ← API más ligero
-          target: google_apis  # ← Imagen más pequeña
-          arch: x86  # ← Arquitectura más rápida sin aceleración
-          profile: pixel_4  # ← Dispositivo más moderno
-          force-avd-creation: false  # ← Reutilizar AVD si existe
+          api-level: 30                # ← Más estable en CI
+          target: google_apis
+          arch: x86_64                 # ← Evita errores de soporte
+          profile: Nexus 6             # ← Emulador ligero y compatible
+          force-avd-creation: true
           disable-animations: true
-          emulator-options: -no-audio -no-window -gpu swiftshader_indirect -no-snapshot -no-boot-anim -memory 2048 -partition-size 1024
+          emulator-options: -no-window -no-audio -no-boot-anim -no-snapshot -gpu swiftshader_indirect
           script: flutter test integration_test/festivities_test.dart
