--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run Integration Tests on Android
+      - name: Run integration tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: 30                # ← Más estable en CI
-          target: google_apis
-          arch: x86_64                 # ← Evita errores de soporte
-          profile: Nexus 6             # ← Emulador ligero y compatible
-          force-avd-creation: true
+          api-level: 29               # API más estable y rápido
+          target: google_apis         # Imagen liviana y compatible
+          arch: x86                   # Más rápido (sin x86_64)
+          profile: pixel_4            # Emulador moderno
+          force-avd-creation: true   # Reutiliza AVD para evitar fallos
           disable-animations: true
-          emulator-options: -no-window -no-audio -no-boot-anim -no-snapshot -gpu swiftshader_indirect
+          emulator-options: -no-window -no-audio -no-snapshot -no-boot-anim -gpu swiftshader_indirect
           script: flutter test integration_test/festivities_test.dart
